--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern",
+  "name": "google-books-search-mongodb",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
